--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "client"]
-	path = client
+	path = https://github.com/extracold1209/websocket-test-react.git
 	url = ./client
 
 [submodule "server"]
-	path = server
+	path = https://github.com/extracold1209/websocket-test-node.git
 	url = ./server
